<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_vkey_X">Button-X</string>
    <string name="menu_vkey_Y">Button-Y</string>
    <string name="menu_vkey_A">Button-A</string>
    <string name="menu_vkey_B">Button-B</string>
    <string name="menu_vkey_MENU">MENU</string>
    <string name="menu_vkey_SELECT">SELECT</string>
    <string name="menu_vkeys">Virtual Keys</string>
    <string name="menu_options">Options</string>
    <string name="menu_quit_game">Exit Game</string>
    <string name="menu_quit">Exit App</string>
    <string name="app_name">ArcoFlexDroid (0.56.2)</string>
    <string name="disconnect">Disconnect</string>
    <string name="join_peer_game">Join Peer Game</string>
    <string name="start_game">Start Game</string>
    <string name="netplay">Netplay</string>
    <string name="connection">Peer-to-peer Netplay</string>
    <string name="wifiTIP">TIP: To get optimal network performance or to play without an access point, enable a Wi-Fi direct connection between peer devices.</string>
    <string name="don_t_bother">Don\'t ask again</string>

    <string name="action_file">File</string>
    <string name="action_settings">Settings</string>
    <string name="action_systems">Systems</string>
    <string name="action_ZX_Spectrum">ZX Spectrum</string>
    <string name="action_Commodore_64">C64</string>
    <string name="action_extras">Extras</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_about2">About2</string>

    <string name="menu_save">Save</string>
    <string name="menu_new">New</string>
    <string name="title_activity_j_mesysfile_open">jMESYSFileOpenActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_j_mesyssettings">Settings</string>

    <string name="dlg_wayOfLoading">Select way of loading</string>
    <string name="dlg_load">Load</string>
    <string name="dlg_fastLoad">Fast-Load</string>
    <string name="dlg_fastLoadRun">Fast-Load + Run</string>
    <string name="dlg_fileToLoad">Select file to load</string>
</resources>

